<resources>
    <string name="app_name">Wardrobe Manager</string>
    <string name="wardrobe_manager">Wardrobe Manager</string>

    <string-array name="clothing_item_options_type">
        <item>hat</item>
        <item>outerwear</item>
        <item>top</item>
        <item>full_body</item>
        <item>belt</item>
        <item>bottom</item>
        <item>socks</item>
        <item>shoes</item>
    </string-array>
    <string name="subtype_prefix">clothing_item_options_subtype_</string>
    <string-array name="clothing_item_options_subtype_hat">
        <item>baseball</item>
        <item>winter</item>
        <item>cowboy</item>
        <item>fedora</item>
        <item>straw</item>
        <item>beach</item>
    </string-array>
    <string-array name="clothing_item_options_subtype_outerwear">
        <item>jacket</item>
        <item>sweatshirt</item>
        <item>quarter-zip</item>
        <item>coat</item>
    </string-array>
    <string-array name="clothing_item_options_subtype_top">
        <item>short_sleeve_shirt</item>
        <item>long_sleeve_shirt</item>
        <item>tank_top</item>
        <item>blouse</item>
        <item>crop_top</item>
    </string-array>
    <string-array name="clothing_item_options_subtype_full_body">
        <item>long_dress</item>
        <item>jumpsuit</item>
        <item>romper</item>
        <item>short_dress</item>
    </string-array>
    <string-array name="clothing_item_options_subtype_belt">
        <item>belt</item>
    </string-array>
    <string-array name="clothing_item_options_subtype_bottom">
        <item>shorts</item>
        <item>pants</item>
        <item>skirt</item>
        <item>joggers</item>
        <item>sweatpants</item>
    </string-array>
    <string-array name="clothing_item_options_subtype_socks">
        <item>no-show</item>
        <item>ankle</item>
        <item>mid-calf</item>
        <item>knee-high</item>
    </string-array>
    <string-array name="clothing_item_options_subtype_shoes">
        <item>sneakers</item>
        <item>high-tops</item>
        <item>dress</item>
        <item>heels</item>
        <item>flats</item>
        <item>slides</item>
        <item>flip-flops</item>
    </string-array>

    <string-array name="clothing_item_options_design">
        <item>primary_secondary</item>
        <item>thin_vertical_stripes</item>
        <item>wide_vertical_stripes</item>
        <item>thin_horizontal_stripes</item>
        <item>wide_horizontal_stripes</item>
        <item>polka_dots</item>
        <item>checker</item>
        <item>vertical_gradient</item>
        <item>horizontal_gradient</item>
        <item>diagonal_up_right</item>
        <item>diagonal_down_right</item>
        <item>birds_eye</item>
    </string-array>
    <string-array name="clothing_item_options_material">
        <item>other</item>
        <item>cotton</item>
        <item>polyester</item>
        <item>denim</item>
        <item>wool</item>
        <item>silk</item>
        <item>leather</item>
        <item>linen</item>
        <item>flannel</item>
    </string-array>
    <string-array name="clothing_item_options_size">
        <item>perfect</item>
        <item>big</item>
        <item>small</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laundry_status">Laundry Status</string>
    <string name="sort_by">Sort By</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="add">Add</string>
    <string name="outfit">Outfit</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
>>>>>>> dev
</resources>
