<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_closet_menu_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@color/white"
    android:focusable="true"
    android:minWidth="@dimen/closet_menu_min_width"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/closet_menu_add_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/closet_menu_button"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/closet_menu_add_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/closet_menu_text_size"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="@+id/closet_menu_add_button"
        app:layout_constraintEnd_toEndOf="@+id/closet_menu_add_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/closet_menu_add_button"
        app:layout_constraintTop_toTopOf="@+id/closet_menu_add_button"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/closet_menu_outfit_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/closet_menu_button"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closet_menu_add_text"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/closet_menu_outfit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/outfit"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/closet_menu_text_size"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="@+id/closet_menu_outfit_button"
        app:layout_constraintEnd_toEndOf="@+id/closet_menu_outfit_button"
        app:layout_constraintStart_toStartOf="@+id/closet_menu_outfit_button"
        app:layout_constraintTop_toTopOf="@+id/closet_menu_outfit_button" />

    <ImageView
        android:id="@+id/closet_menu_sort_by_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/closet_menu_button"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closet_menu_outfit_text"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/closet_menu_sort_by_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sort_by"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/closet_menu_text_size"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="@+id/closet_menu_sort_by_button"
        app:layout_constraintEnd_toEndOf="@+id/closet_menu_sort_by_button"
        app:layout_constraintStart_toStartOf="@+id/closet_menu_sort_by_button"
        app:layout_constraintTop_toTopOf="@+id/closet_menu_sort_by_button" />

    <ImageView
        android:id="@+id/closet_menu_search_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/closet_menu_button"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closet_menu_sort_by_text"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/closet_menu_search_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@android:string/search_go"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/closet_menu_text_size"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="@+id/closet_menu_search_button"
        app:layout_constraintEnd_toEndOf="@+id/closet_menu_search_button"
        app:layout_constraintStart_toStartOf="@+id/closet_menu_search_button"
        app:layout_constraintTop_toTopOf="@+id/closet_menu_search_button" />

    <ImageView
        android:id="@+id/closet_menu_settings_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/closet_menu_button"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/closet_menu_settings_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/settings"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/closet_menu_text_size"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="@+id/closet_menu_settings_button"
        app:layout_constraintEnd_toEndOf="@+id/closet_menu_settings_button"
        app:layout_constraintStart_toStartOf="@+id/closet_menu_settings_button"
        app:layout_constraintTop_toTopOf="@+id/closet_menu_settings_button" />


</androidx.constraintlayout.widget.ConstraintLayout>